Add JWT exception handling and fix response status from 500 to 401